--- a/RushipesWeb_V1/Views/Recette/Create.cshtml
+++ b/RushipesWeb_V1/Views/Recette/Create.cshtml
@@ -41,7 +41,7 @@
                 
 
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="Auteur" class="form-control" id="Auteur" value="@User.Identity.Name" placeholder="name@example.com" />
+                    <input asp-for="Auteur" class="form-control" id="Auteur"  placeholder="name@example.com" />
                     <label asp-for="Auteur" class="form-label"></label>
                 </div>
 
